--- a/src/style.css
+++ b/src/style.css
@@ -1,36 +1,71 @@
-h1 {
+body {
+  background: rgb(250, 199, 230);
   font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.container {
+  margin: 120px auto;
+  max-width: 600px;
+}
+
+header {
+  margin-bottom: 30px;
+}
+
+h1 {
   text-align: center;
+  font-weight: 800;
+  font-size: 36px;
+  line-height: 1.5;
+  color: rgb(55, 4, 103);
 }
 
 form {
-  text-align: center;
-  margin: 40px;
-}
-
-#search-bar {
-  padding: 15px;
-  border-radius: 6px;
-  font-family: Georgia, "Times New Roman", Times, serif;
-}
-
-button {
+  padding: 30px;
   background-color: whitesmoke;
-  padding: 15px;
-  border-radius: 6px;
-  display: block;
-  margin: 0 auto;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  text-align: center;
+  margin: 30px 0;
+  border-radius: 10px;
+  display: flex;
 }
 
-div {
-  text-align: center;
-  margin-top: 20px;
+.search-bar {
+  padding: 15px;
+  border: 1px solid rgba(55, 4, 103, 0.5);
+  border-radius: 50px;
+  width: 80%;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 14px;
+  line-height: 20px;
+  color: rgb(55, 4, 103);
+}
+
+.submit-button {
+  margin-left: 10px;
+  background: rgb(55, 4, 103);
+  color: whitesmoke;
+  border: none;
+  border-radius: 50px;
+  padding: 14px 24px;
+}
+
+.fable {
+  font-size: 14px;
+  background-color: whitesmoke;
+  padding: 20px;
+  line-height: 2;
+  border-left: 3px solid rgb(55, 4, 103);
+  border-radius: 10px;
+  box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
+}
+
+a {
+  color: rgb(87, 73, 149);
 }
 
 footer {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 30px;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 12px;
 }
