--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,14 @@ body {
   max-width: 600px;
 }
 
+.container-2 {
+  padding: 30px;
+  background-color: whitesmoke;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.2);
+}
+
 header {
   margin-bottom: 30px;
 }
@@ -21,7 +29,7 @@ h1 {
 }
 
 form {
-  padding: 30px;
+  padding: 10px 30px;
   background-color: whitesmoke;
   text-align: center;
   margin: 30px 0;
@@ -56,7 +64,7 @@ form {
   line-height: 2;
   border-left: 3px solid rgb(55, 4, 103);
   border-radius: 10px;
-  box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
+  box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.2);
 }
 
 a {
