--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container-2 {
-  padding: 30px;
+  padding: 15px 20px;
   background-color: whitesmoke;
   margin-bottom: 30px;
   border-radius: 10px;
@@ -29,10 +29,10 @@ h1 {
 }
 
 form {
-  padding: 10px 30px;
+  padding: 15px 30px;
   background-color: whitesmoke;
   text-align: center;
-  margin: 30px 0;
+  margin: 20px 0;
   border-radius: 10px;
   display: flex;
 }
@@ -57,6 +57,15 @@ form {
   padding: 14px 24px;
 }
 
+.hint {
+  line-height: 1.5;
+  font-size: 12px;
+  margin-top: 5px;
+  margin-left: 50px;
+  opacity: 0.9;
+  color: rgb(87, 73, 149);
+}
+
 .fable {
   font-size: 14px;
   background-color: whitesmoke;
@@ -65,6 +74,10 @@ form {
   border-left: 3px solid rgb(55, 4, 103);
   border-radius: 10px;
   box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.2);
+}
+
+.hidden {
+  display: none;
 }
 
 a {
